force-app/main/default/objects/Adoption__c/fields/Adoption_type__c.field-meta.xml
<CustomField>
    <fullName>Adoption_type__c</fullName>
    <label>Adoption type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>