force-app/main/default/objects/Adoption__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Person</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Adoptions</relationshipLabel>
    <relationshipName>Adoptions</relationshipName>
    <type>Lookup</type>
</CustomField>