force-app/main/default/objects/Adoption__c/recordTypes/Real.recordType-meta.xml
<RecordType>
    <fullName>Real</fullName>
    <active>true</active>
    <label>Real</label>
</RecordType>