force-app/main/default/objects/Adoption__c/validationRules/Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Validation</fullName>
    <active>true</active>
    <description>Value can&apos;t be less than 10.</description>
    <errorConditionFormula>Amount__c  &lt; 10</errorConditionFormula>
    <errorMessage>The Amount field must have a value of 10 or higher.</errorMessage>
</ValidationRule>