force-app/main/default/objects/Adoption__c/validationRules/Animal_Not_Adopted.validationRule-meta.xml
<ValidationRule>
    <fullName>Animal_Not_Adopted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISNEW(),
  Animal__r.Is_Adopted__c = TRUE
)</errorConditionFormula>
    <errorDisplayField>Animal__c</errorDisplayField>
    <errorMessage>Animal already adopted or in progress.</errorMessage>
</ValidationRule>